--- a/apputveckling/src/main/webapp/includes/editClient.xhtml
+++ b/apputveckling/src/main/webapp/includes/editClient.xhtml
@@ -18,7 +18,8 @@
 
             </h:panelGrid>
 
-            <h:commandButton value="Submit" action="#{clientBean.saveOrUpdateClient}"/>        </div>
+            <h:commandButton value="Submit" action="#{clientBean.saveOrUpdateClient}"/>
+        </div>
     </h:form>
 </h:body>
 
