--- a/apputveckling/src/main/webapp/assets/styles.css
+++ b/apputveckling/src/main/webapp/assets/styles.css
@@ -9,8 +9,19 @@
 }
 .custom-input{
     margin-bottom: 1%;
+    margin-top: 1%;
     width: 30%;
     border-radius: 12px;
+}
+.custom-button{
+    position: relative;
+    margin-left: 1%;
+    width: 8%;
+    background-color: grey;
+    border-radius: 12px;
+    color: white;
+    border: 1px solid black;
+
 }
 
 .Medlemmar{
@@ -24,6 +35,9 @@
     max-height: 200px;
     overflow-y: auto;
 
+}
+#link:hover{
+    background-color: lightblue;
 
 }
 .history_list{
