improvements to code 5

--- a/apputveckling/src/main/webapp/assets/styles.css
+++ b/apputveckling/src/main/webapp/assets/styles.css
@@ -36,9 +36,8 @@
     overflow-y: auto;
 
 }
-#link:hover{
+#link_styl:hover{
     background-color: lightblue;
-
 }
 .history_list{
     position: relative;
