--- a/apputveckling/src/main/webapp/includes/customerInfo.xhtml
+++ b/apputveckling/src/main/webapp/includes/customerInfo.xhtml
@@ -10,13 +10,14 @@
 
     <div class="customer_info">
 
-        <h1>TEST</h1>
-        <h3>#{clientBean.test.size()}</h3>
-        <ui:repeat value="#{clientBean.test}" var="item">
-            <p>#{item.name}</p>
-            <p>#{item.date}</p>
-            <p>#{item.email}</p>
-        </ui:repeat>
+        <h1>Client Details</h1>
+
+        <p>#{clientBean.test.clientID}</p>
+        <p>#{clientBean.test.name}</p>
+        <p>#{clientBean.test.date}</p>
+        <p>#{clientBean.test.email}</p>
+
+
 
     </div>
 
