home.xhmtl och product.xhtml är färdigt.

--- a/apputveckling/src/main/webapp/includes/client_inc/clientHomeContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/clientHomeContent.xhtml
@@ -29,7 +29,7 @@
                     <p class="card-text">Interested in trying out a musical instrument before making a purchase decision? At Gitarrworksop, we understand the importance of finding the perfect instrument that suits your style and preferences.</p>
 
                 </div>
-                <div class="card-footer">
+                <div class="card-footer" id="repairBox">
                     <a href="#productBox" class="btn ">Coming soon...</a>
                 </div>
             </div>
