--- a/apputveckling/src/main/webapp/includes/client_inc/repair_field.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/repair_field.xhtml
@@ -1,4 +1,4 @@
-<div class="container m-5" id="repairBox">
+<div class="container m-5" >
     <div class="card m-5">
         <div class="card-body">
             <h5 class="card-title">Instrument Repair Services</h5>
@@ -14,13 +14,13 @@
             <p class="card-text">
                 Explore our repair services and trust us to breathe new life into your musical instruments. Our commitment to craftsmanship and attention to detail make us the ideal choice for musicians seeking reliable and exceptional repair solutions.
             </p>
-            <p class="card-text">
+            <p class="card-text" id="meetingBox">
                 Ready to get your instrument back in perfect shape? Schedule a meeting with our experts to discuss your specific needs and find the best solution for you.
             </p>
-            <a href="#" class="btn btn-outline-dark">Schedule a Meeting</a>
+            <a href="#" class="btn btn-dark">Schedule a Meeting</a>
         </div>
     </div>
-    <div class="card m-5" id="meetingBox">
+    <div class="card m-5" >
         <div class="card-body">
             <h5 class="card-title">Explore and Try Instruments</h5>
             <p class="card-text">
@@ -35,7 +35,7 @@
             <p class="card-text">
                 Ready to discover your next musical companion? Schedule a meeting with our experts and embark on a journey to find the perfect instrument for your musical expression.
             </p>
-            <a href="#" class="btn btn-outline-dark">Schedule a Meeting</a>
+            <a href="#" class="btn btn-dark">Schedule a Meeting</a>
         </div>
     </div>
 </div>
