--- a/apputveckling/src/main/webapp/includes/client_inc/productDetails.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/productDetails.xhtml
@@ -1,55 +1,64 @@
-<div xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html" >
-    <div class="#{productBean.isShowProductDetails eq 'true' ? 'card m-5' : 'hidden'}">
-        <ui:repeat value="#{productBean.productsDetails}" var="item">
-            <div class="row">
-                <div class="col-md-6">
-                    <!-- Bootstrap Carousel for Image Slider -->
-                    <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-indicators">
-                            <ui:repeat value="#{productImagesBean.productImages}" var="image" varStatus="status">
-                                <button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="#{status.index}" class="#{status.index eq 0 ? 'active' : ''}" aria-current="#{status.index eq 0 ? 'true' : 'false'}" aria-label="Slide #{status.index}" />
-                            </ui:repeat>
+<div xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html">
+    <div class="#{productBean.isShowProductDetails eq 'true' ? ' m-5' : 'hidden'}">
+        <div class="card" style="text-align: left">
+            <ui:repeat value="#{productBean.productsDetails}" var="item">
+                <div class="row">
+                    <div class="col-md-6">
+                        <!-- Bootstrap Carousel for Image Slider -->
+                        <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel" style="max-width: 400px">
+                            <div class="carousel-indicators">
+                                <ui:repeat value="#{productImagesBean.getProductImages(item.PRODUCT_ID)}" var="image"
+                                           varStatus="status">
+                                    <button type="button" data-bs-target="#imageCarousel"
+                                            data-bs-slide-to="#{status.index}"
+                                            class="#{status.index eq 0 ? 'active' : ''}"
+                                            aria-current="#{status.index eq 0 ? 'true' : 'false'}"
+                                            aria-label="Slide #{status.index}"/>
+                                </ui:repeat>
+                            </div>
+                            <div class="carousel-inner">
+                                <ui:repeat value="#{productImagesBean.getProductImages(item.PRODUCT_ID)}" var="image"
+                                           varStatus="status">
+                                    <div class="carousel-item #{status.index eq 0 ? 'active' : ''}">
+                                        <img style="max-height: 400px; cursor: pointer;"
+                                             src="#{request.contextPath}/resources/img/#{image.imgPathString}"
+                                             alt="#{item.PRODUCT_NAME}" class="d-block w-100 img-fluid"
+                                             data-bs-toggle="modal" data-bs-target="#imageModal"/>
+                                    </div>
+                                </ui:repeat>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel"
+                                    data-bs-slide="prev" style="top: 50%; transform: translateY(-50%);">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#imageCarousel"
+                                    data-bs-slide="next" style="top: 50%; transform: translateY(-50%);">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
                         </div>
-                        <div class="carousel-inner">
-                            <ui:repeat value="#{productImagesBean.productImages}" var="image" varStatus="status">
-                                <div class="carousel-item #{status.index eq 0 ? 'active' : ''}">
-                                    <img style="max-height: 400px; cursor: pointer;" src="#{image.imgPathString}" alt="#{item.PRODUCT_NAME}" class="d-block w-100 img-fluid" data-bs-toggle="modal" data-bs-target="#imageModal"/>
-                                </div>
-                            </ui:repeat>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev" style="top: 50%; transform: translateY(-50%);">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#imageCarousel" data-bs-slide="next" style="top: 50%; transform: translateY(-50%);">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <h1>#{item.PRODUCT_NAME}</h1>
-                    <h2>#{item.PRODUCT_MAIN_DESC}</h2>
-                    <h3>#{item.PRODUCT_HISTORY_DESC}</h3>
-                    <h4>#{item.PRODUCT_YEAR}</h4>
-                    <p>#{item.PRODUCT_PRICE}</p>
-                    <h:form>
-                        <h:commandButton value="Reserve" class="btn btn-primary"/>
-                    </h:form>
-                </div>
-            </div>
-        </ui:repeat>
+                    <div class="col-md-6 mt-5">
+                        <h2>#{item.PRODUCT_NAME}</h2>
+                        <p>#{item.PRODUCT_MAIN_DESC}</p>
+                        <p>Model: #{item.PRODUCT_YEAR}</p>
+                        <h3>Price: #{item.PRODUCT_PRICE}$</h3>
+                        <h:form styleClass="m-5">
+                            <h:commandButton style="float: right" value="Reserve" class="btn btn-dark"/>
+                        </h:form>
+                    </div>
 
-        <!-- TODO: när img clicks visa samma bild men större -->
-        <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <img id="largerImage" class="img-fluid" alt="Larger Image"/>
+                </div>
+                <div class="m-5">
+                    <div class="" style="justify-content: left">
+                        <h2>About #{productBean.productsDetails.get(0).PRODUCT_NAME}</h2>
+                        <p>About #{productBean.productsDetails.get(0).PRODUCT_HISTORY_DESC}</p>
                     </div>
                 </div>
-            </div>
+
+            </ui:repeat>
+
         </div>
     </div>
-
 </div>
