Added interactable calendar

--- a/apputveckling/src/main/webapp/assets/styles.css
+++ b/apputveckling/src/main/webapp/assets/styles.css
@@ -73,3 +73,11 @@
     margin: auto;
 }
 
+.calendar-content-cust {
+    text-align: center;
+    margin: auto;
+}
+
+.calendar-header-cust {
+    font-family: Gadugi, fantasy;
+}
