--- a/apputveckling/src/main/webapp/includes/Calendar.xhtml
+++ b/apputveckling/src/main/webapp/includes/Calendar.xhtml
@@ -1,8 +1,15 @@
-<div class="container-fluid" xmlns:h="http://java.sun.com/jsf/html">
-    <div class="row">
-        <div class="col-md-9 order-md-first">
-            <h1>Calendar</h1>
-            <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FLondon&amp;src=MzM4NDhmMzFhNTYyYjUyZTlhZThmOWVkODU4NmFiNmRjZmJiZmYyNGNhY2IyNTM3Y2RkNDhhZThhNmJjYzljOUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=c3Yuc3dlZGlzaCNob2xpZGF5QGdyb3VwLnYuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=ZW4uc3dlZGlzaCNob2xpZGF5QGdyb3VwLnYuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=MG1jcDNhNHYzdTVxYm12N3QxNnNxOGNuM2gydmkyaGZAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;color=%23009688&amp;color=%239E69AF&amp;color=%237986CB&amp;color=%230B8043&amp;color=%23F4511E" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"> </iframe>
-        </div>
-    </div>
+<div class="container-fluid"
+     xmlns="http://www.w3.org/1999/xhtml"
+     xmlns:h="http://xmlns.jcp.org/jsf/html"
+     xmlns:f="http://xmlns.jcp.org/jsf/core">
+    <h:head>
+        <title>Calendar Page</title>
+    </h:head>
+
+    <h:body>
+        <div id="calendar"> </div>
+
+        <script type="text/javascript" src="#{request.contextPath}/resources/js/Calendar.js-main/dist/calendar.js"> </script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/js/calendar.js"> </script>
+    </h:body>
 </div>
