--- a/apputveckling/src/main/webapp/views/template.xhtml
+++ b/apputveckling/src/main/webapp/views/template.xhtml
@@ -4,19 +4,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <head>
     <title>My Application</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="#{request.contextPath}/assets/styles.css"/>
     <link rel="stylesheet" href="#{request.contextPath}/resources/css/bootstrap.min.css"/>
-    <script type="text/javascript" src="https://www.google.com/jsapi"> </script><!-- Google Charts -->
-    <script src="#{request.contextPath}/resources/js/statistics.js" type=""> </script>
-    <script src="#{request.contextPath}/resources/js/bootstrap.bundle.min.js" type=""> </script>
-    <script type="text/javascript">
-        google.charts.load('current', {'packages': ['bar']});
-        google.charts.setOnLoadCallback(drawStuff);
-    </script>
+    <script type="text/javascript" src="#{request.contextPath}/resources/js/bootstrap.bundle.min.js"> </script>
+
+    <!-- Calendar.js by williamtroup https://github.com/williamtroup/Calendar.js -->
+    <link rel="stylesheet" href="#{request.contextPath}/resources/js/Calendar.js-main/dist/calendar.js.css" />
+    <script type="text/javascript" src="#{request.contextPath}/resources/js/statistics.js"> </script>
+
     <!-- This previous code didn't import the bootstrap js bundle successfully:
     <h:outputScript library="js" name="bootstrap.bundle.min.js" target="head"/> -->
 </head>
@@ -39,10 +39,10 @@
     </div>
 
     <!-- Offcanvas Sidebar for mobile -->
-    <div class="offcanvas offcanvas-start bg-dark text-white" tabindex="-1" id="sidebar" data-bs-toggle="offcanvas">
+    <div class="offcanvas offcanvas-start bg-dark text-white" id="sidebar" data-bs-toggle="offcanvas">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title"> </h5>
-            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"> </button>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"> </button>
         </div>
         <div class="offcanvas-body">
             <ui:include src="nav-items.xhtml"/>
