Added weekly + monthly + widget calendar

--- a/apputveckling/src/main/webapp/includes/Calendar.xhtml
+++ b/apputveckling/src/main/webapp/includes/Calendar.xhtml
@@ -4,10 +4,23 @@
      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Calendar Page</title>
+        <a href="https://github.com/williamtroup/Calendar.js">Calendar.js github page</a>
     </h:head>
 
     <h:body>
-        <div id="calendar"> </div>
+        <div class="d-flex flex-row bd-highlight mb-3">
+            <div class="d-flex flex-column bd-highlight mb-3">
+                <div class="p-2 bd-highlight">
+                    <div id="calendarMonthly" style="height: 25rem">
+                    </div>
+                </div>
+                <div class="p-2 bd-highlight">
+                    <div id="calendarWidget" style="height: 20rem">
+                    </div>
+                </div>
+            </div>
+            <div id="calendarWeekly" style="width: 60%; height: 50rem"> </div>
+        </div>
 
         <script type="text/javascript" src="#{request.contextPath}/resources/js/Calendar.js-main/dist/calendar.js"> </script>
         <script type="text/javascript" src="#{request.contextPath}/resources/js/calendar.js"> </script>
