Hamburger knappen för client sidan

--- a/apputveckling/src/main/webapp/views/client/product.xhtml
+++ b/apputveckling/src/main/webapp/views/client/product.xhtml
@@ -21,6 +21,7 @@
         <ui:include src="../../includes/client_inc/productDetails.xhtml"/>
         <ui:include src="../../includes/client_inc/productClient.xhtml"/>
         <ui:include src="../../includes/client_inc/repair_field.xhtml"/>
+        <a href="test.xhtml" class="btn btn-primary">test</a>
     </div>
     <ui:include src="../../includes/client_inc/footer.xhtml"/>
 </h:body>
