--- a/apputveckling/src/main/webapp/includes/client_inc/nav_client.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/nav_client.xhtml
@@ -19,19 +19,17 @@
                 />
             </h:form>
         </div>
-        <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarNavRight"
+        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavRight"
                 aria-controls="navbarNavRight" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"/>
         </button>
-        <!-- Right Side Of Navbar
-         TODO: fix it, when menu is clicked->show this!-->
-        <div class="collapse navbar-collapse" id="navbarNavRight">
+        <div class="offcanvas offcanvas-end bg-dark " id="navbarNavRight" data-bs-toggle="navbar-toggler" style="margin-top: 72px">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Bli Medlem</a>
+                    <a class="nav-link text-white" href="#">Bli Medlem</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link text-white" href="#">Login</a>
                 </li>
             </ul>
         </div>
