improvements to code 7, funktionaliteten är på bra våg

--- a/apputveckling/src/main/webapp/includes/members.xhtml
+++ b/apputveckling/src/main/webapp/includes/members.xhtml
@@ -73,7 +73,7 @@
     <h:form>
         <h5 style="margin-top:2px">Client List</h5>
         <h:inputText styleClass="custom-input" value="#{clientBean.searchName}"/>
-        <h:commandButton styleClass="custom-button" value="Submit" action="#{clientBean.Search()}"/>
+        <h:commandButton styleClass="custom-button" value="Submit" action="#{clientBean.Search}"/>
     </h:form>
 
     <div class="list-group list-group-action test">
