--- a/apputveckling/src/main/webapp/includes/members.xhtml
+++ b/apputveckling/src/main/webapp/includes/members.xhtml
@@ -4,9 +4,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
+<h:head>
 
+</h:head>
 <body>
 
 <div class="history_div">
@@ -90,8 +93,14 @@
     </div>
 
 <h:form>
-    <h:commandButton styleClass="add_button" value="Add New Client" action="popUp.xhtml"/>
+    <p:commandButton styleClass="add_button m-3" value="Add New Client" action="#{clientBean.addClient()}" update=":addcilent"
+     oncomplete="PF('addcilent').show()"/>
+
 </h:form>
+
+    <p:dialog id="addcilent" widgetVar="addcilent" modal="true" visible="false" >
+        <ui:include src="editMember.xhtml"/>
+    </p:dialog>
 
 </div>
 
