--- a/apputveckling/src/main/webapp/views/admin_products.xhtml
+++ b/apputveckling/src/main/webapp/views/admin_products.xhtml
@@ -6,16 +6,20 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                    xmlns:h="http://xmlns.jcp.org/jsf/html"
-                    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                    xmlns:f="http://xmlns.jcp.org/jsf/core"
-                    template="/views/template.xhtml">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                template="/views/template.xhtml">
 
-        <ui:define name="content">
-            <h1 style="text-align: center;margin-bottom: 30px;">"product list!"</h1>
-            <ui:include src="../includes/productContent.xhtml"/>
-        </ui:define>
+    <ui:define name="content">
+        <h1 style="text-align: center;margin-bottom: 30px;">"product list!"</h1>
+        <ui:include src="../includes/productContent.xhtml"/>
+        <h:form>
+            <h:commandButton value="BTN" action="#{navigationBean.goToHomePage()}"/>
+        </h:form>
+    </ui:define>
 
-    </ui:composition>
+
+</ui:composition>
 </html>
