Final touch for prototype2

--- a/apputveckling/src/main/webapp/assets/styles.css
+++ b/apputveckling/src/main/webapp/assets/styles.css
@@ -78,6 +78,10 @@
     margin: auto;
 }
 
-.calendar-header-cust {
-    font-family: Gadugi, fantasy;
+
+.calendar-flex-col1-cust {
+    width: 25%;
+}
+.calendar-flex-col2-cust {
+    width: 50%;
 }
