--- a/apputveckling/src/main/webapp/includes/Calendar.xhtml
+++ b/apputveckling/src/main/webapp/includes/Calendar.xhtml
@@ -9,17 +9,20 @@
 
     <h:body>
         <div class="d-flex flex-row bd-highlight mb-3">
-            <div class="d-flex flex-column bd-highlight mb-3">
+            <div class="d-flex flex-column bd-highlight mb-3 calendar-flex-col1-cust">
                 <div class="p-2 bd-highlight">
                     <div id="calendarMonthly" style="height: 25rem">
                     </div>
                 </div>
                 <div class="p-2 bd-highlight">
-                    <div id="calendarWidget" style="height: 20rem">
+                    <div id="calendarWidget" style="height: 20rem; width: 100%;">
                     </div>
                 </div>
             </div>
-            <div id="calendarWeekly" style="width: 60%; height: 50rem"> </div>
+            <div class="p-2 bd-highlight calendar-flex-col2-cust">
+                <div id="calendarWeekly" style="height: 50rem">
+                </div>
+            </div>
         </div>
 
         <script type="text/javascript" src="#{request.contextPath}/resources/js/Calendar.js-main/dist/calendar.js"> </script>
