--- a/apputveckling/src/main/webapp/views/admin_calendar.xhtml
+++ b/apputveckling/src/main/webapp/views/admin_calendar.xhtml
@@ -13,7 +13,7 @@
                 template="/views/template.xhtml">
         <ui:define name="content">
             <div class="calendar-content-cust">
-                <h1 class="calendar-header-cust">Din kalender</h1>
+                <h1 class="offcanvas-title">Din kalender</h1>
                 <ui:include src="../includes/Calendar.xhtml"/>
             </div>
         </ui:define>
