--- a/apputveckling/src/main/webapp/includes/customerInfo.xhtml
+++ b/apputveckling/src/main/webapp/includes/customerInfo.xhtml
@@ -4,7 +4,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
+
+<h:head>
+</h:head>
 
 <body>
 
@@ -13,15 +17,20 @@
         <h1>Client Details</h1>
         <h:form>
             <h:commandButton value="Delete Client" action="#{clientBean.deleteEntity(clientBean.clientToEdit.clientID)}"/>
-            <h:commandButton value="Edit Client" action="editMember"/>
+
+            <p:commandButton styleClass="editClient" value="Edit Client" action="editMember" update=":editClient"
+                             oncomplete="PF('editClient').show()"/>
+
         </h:form>
 
-    <p>#{clientBean.clientToEdit.clientID}</p>
+        <p:dialog id="editClient" widgetVar="editClient" modal="true" visible="false" header="Edit Client" >
+            <ui:include src="editMember.xhtml"/>
+        </p:dialog>
+
+        <p>#{clientBean.clientToEdit.clientID}</p>
         <p>#{clientBean.clientToEdit.name}</p>
         <p>#{clientBean.clientToEdit.date}</p>
         <p>#{clientBean.clientToEdit.email}</p>
-
-
 
     </div>
 
