--- a/apputveckling/src/main/webapp/includes/members.xhtml
+++ b/apputveckling/src/main/webapp/includes/members.xhtml
@@ -98,7 +98,7 @@
 
 </h:form>
 
-    <p:dialog id="addcilent" widgetVar="addcilent" modal="true" visible="false" >
+    <p:dialog id="addcilent" widgetVar="addcilent" modal="true" visible="false" header="Add Client" >
         <ui:include src="editMember.xhtml"/>
     </p:dialog>
 
