--- a/apputveckling/src/main/webapp/views/template.xhtml
+++ b/apputveckling/src/main/webapp/views/template.xhtml
@@ -16,7 +16,12 @@
     <!-- Calendar.js by williamtroup https://github.com/williamtroup/Calendar.js -->
     <link rel="stylesheet" href="#{request.contextPath}/resources/js/Calendar.js-main/dist/calendar.js.css" />
     <script type="text/javascript" src="#{request.contextPath}/resources/js/statistics.js"> </script>
+    <script type="text/javascript" src="https://www.google.com/jsapi"> </script><!-- Google Charts -->
 
+    <script type="text/javascript">
+        google.charts.load('current', {'packages': ['bar']});
+        google.charts.setOnLoadCallback(drawStuff);
+    </script>
     <!-- This previous code didn't import the bootstrap js bundle successfully:
     <h:outputScript library="js" name="bootstrap.bundle.min.js" target="head"/> -->
 </head>
