--- a/apputveckling/src/main/webapp/includes/productContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/productContent.xhtml
@@ -1,31 +1,15 @@
-<div id="menu" class="container">
+<div id="menu" class="container" xmlns:ui="http://java.sun.com/jsf/facelets">
 
-   <div class="container-fluid row menu">
-      <div class="card" style="width: 25rem;">
-         <img src="../resources/img/guitar3.webp" class="card-img-top" alt="..."></img>
-         <div class="card-body">
-            <h5 class="card-title">bob marleys guitarr</h5>
-            <p class="card-text">spelad av bob marley</p>
-            <a href="" class="location link btn btn-dark">redigera inlägg</a>
-         </div>
-      </div>
-      <div class="card" style="width: 25rem;">
-         <img src="../resources/img/guitar1.webp" class="card-img-top" alt="..."></img>
-         <div class="card-body">
-            <h5 class="card-title">trä guitarr</h5>
-            <p class="card-text">hög kvalite från 1900</p>
-            <a  href="" class="location-link btn btn-dark">redigera inlägg</a>
-         </div>
-      </div>
-
-      <div class="card" style="width: 25rem;">
-         <img src="../resources/img/guitar2.webp" class="card-img-top" alt="something"></img>
-         <div class="card-body">
-            <h5 class="card-title">trä guitarr</h5>
-            <p class="card-text"> hög kvalite från 1788 </p>
-            <a  href="" class="location-link btn btn-dark">redigera inlägg</a>
-         </div>
-      </div>
-
-   </div>
+    <div class="container-fluid row menu">
+       <ui:repeat value="#{productBean.products}" var="item">
+        <div class="card" style="width: 20rem;">
+            <img src="../resources/img/#{productImagesBean.getOneImage(item.PRODUCT_ID)}" class="card-img-top" alt="..."/>
+            <div class="card-body">
+                <h5 class="card-title">#{item.PRODUCT_NAME}</h5>
+                <p class="card-text">#{item.PRODUCT_MAIN_DESC}</p>
+                <a href="" class="location link btn btn-dark">redigera inlägg</a>
+            </div>
+        </div>
+       </ui:repeat>
+    </div>
 </div>
