--- a/apputveckling/src/main/webapp/includes/customerInfo.xhtml
+++ b/apputveckling/src/main/webapp/includes/customerInfo.xhtml
@@ -18,10 +18,11 @@
 
         <h1>Client Details</h1>
         <h:form>
-            <h:commandButton value="Delete Client" action="#{clientBean.deleteEntity(clientBean.clientToEdit.clientID)}"/>
+            <h:commandButton  value="Delete Client" action="#{clientBean.deleteEntity(clientBean.clientToEdit.clientID)}"
+            style="color: white;border: none;font-size: 23px;margin-left: 2%;margin-top:2% ; background-color: red; border-radius: 5px"/>
 
-            <p:commandButton styleClass="editClient " value="Edit Client" action="editMember" update=":editClient"
-                             oncomplete="PF('editClient').show()"/>
+            <p:commandButton styleClass="editClient" value="Edit Client" action="editMember" update=":editClient"
+                             oncomplete="PF('editClient').show()" style="margin-left: 3%"/>
 
         </h:form>
 
@@ -29,13 +30,12 @@
             <ui:include src="editMember.xhtml"/>
         </p:dialog>
 
-        <p>#{clientBean.clientToEdit.clientID}</p>
-        <p>#{clientBean.clientToEdit.name}</p>
-        <p>#{clientBean.clientToEdit.date}</p>
-        <p>#{clientBean.clientToEdit.email}</p>
+        <p style="margin-top : 2%"><strong>Name</strong>: #{clientBean.clientToEdit.name}</p>
+        <p><strong>Email :</strong>: #{clientBean.clientToEdit.email}</p>
+        <p><strong>Tel :</strong> #{clientBean.clientToEdit.phone}</p>
 
     </div>
-
+<hr/>
 
 
 
