--- a/apputveckling/src/main/webapp/includes/clients.xhtml
+++ b/apputveckling/src/main/webapp/includes/clients.xhtml
@@ -6,225 +6,104 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-<h:head>
-</h:head>
 
+<h:head>
+
+</h:head>
 <body>
 
-
-
-<div class="container-fluid p-4 m-3 history_div" style="width: 95%;">
+<div class="history_div">
     <h3>History</h3>
     <hr/>
-    <div class="row">
 
-        <div class="col">
-            <p class="card-text"><strong>Name: </strong></p>
-        </div>
+    <div class="card">
+        <div class="row">
 
-        <div class="col">
-            <p class="card-text"><strong>Appointment Typ: </strong></p>
-        </div>
+            <div class="col">
+                <p class="card-text"><strong>ID: </strong></p>
+            </div>
+            <div class="col">
+                <p class="card-text"><strong>Name: </strong></p>
+            </div>
 
-        <div class="col">
-            <p class="card-text"><strong>Time: </strong></p>
-        </div>
+            <div class="col">
+                <p class="card-text"><strong>Appointment Typ: </strong></p>
+            </div>
 
-    </div>
-
-    <div class="card mt-3 history_list">
-
-        <div class="card-body">
-            <div class="container">
-
-                <div class="row">
-
-                    <div class="col">
-                        <p class="card-text">The Goat</p>
-                    </div>
-
-                    <div class="col">
-                        <p class="card-text">Reparation</p>
-                    </div>
-
-                    <div class="col">
-                        <p class="card-text">2023-11-20</p>
-                    </div>
-
-                </div>
-                <hr/>
-                <div class="row">
-
-                    <div class="col">
-                        <p class="card-text">Johannes Bestis</p>
-                    </div>
-
-                    <div class="col">
-                        <p class="card-text">Reservation</p>
-                    </div>
-
-                    <div class="col">
-                        <p class="card-text">2023-11-18</p>
-                    </div>
-
-                </div>
-                <hr/>
-                <div class="row">
-
-                    <div class="col">
-                        <p class="card-text">Nasir Bootstrap</p>
-                    </div>
-
-                    <div class="col">
-                        <p class="card-text">Reparation</p>
-                    </div>
-
-                    <div class="col">
-                        <p class="card-text">2023-11-16</p>
-                    </div>
-
-                </div>
-                <hr/>
-                <div class="row">
-
-                    <div class="col">
-                        <p class="card-text">Amarildo Min Chatgpt</p>
-                    </div>
-
-                    <div class="col">
-                        <p class="card-text">Reservation</p>
-                    </div>
-
-                    <div class="col">
-                        <p class="card-text">2023-11-15</p>
-                    </div>
-
-                </div>
-
-                <hr/>
-                <div class="row">
-
-                    <div class="col">
-                        <p class="card-text">Taha Kungen</p>
-                    </div>
-
-                    <div class="col">
-                        <p class="card-text">Reservation</p>
-                    </div>
-
-                    <div class="col">
-                        <p class="card-text">2023-11-15</p>
-                    </div>
-
-                </div>
-                <hr/>
-                <div class="row">
-
-                    <div class="col">
-                        <p class="card-text">Seran project-ledare</p>
-                    </div>
-
-                    <div class="col">
-                        <p class="card-text">Reservation</p>
-                    </div>
-
-                    <div class="col">
-                        <p class="card-text">2023-11-15</p>
-                    </div>
-                </div>
-
-                <hr/>
-                <div class="row">
-                    <div class="col">
-                        <p class="card-text">Emmanuel New Guy</p>
-                    </div>
-                    <div class="col">
-                        <p class="card-text">Reservation</p>
-                    </div>
-                    <div class="col">
-                        <p class="card-text">2023-11-15</p>
-                    </div>
-                </div>
-                <ui:repeat value="#{clientBean.clients}" var="clients2">
-                    <hr/>
-
-                    <div class="row">
-
-                        <div class="col">
-                            <p class="card-text">#{clients2.name}</p>
-                        </div>
-                        <div class="col">
-                            <p class="card-text">Reservation</p>
-                        </div>
-                        <div class="col">
-                            <p class="card-text">2023-11-15</p>
-                        </div>
-
-                    </div>
-                </ui:repeat>
-
+            <div class="col">
+                <p class="card-text"><strong>Time: </strong></p>
             </div>
 
         </div>
 
     </div>
 
+
+    <div class="card mt-3 history_list">
+
+        <ui:repeat value="#{clientBean.clients}" var="clients">
+            <div class="row">
+                <div class="col">
+                    <p class="card-text">#{clients.clientID}</p>
+                </div>
+
+                <div class="col">
+                    <p class="card-text">#{clients.name}</p>
+                </div>
+
+                <div class="col">
+                    <p class="card-text">#{clients.cas_type}</p>
+                </div>
+
+                <div class="col">
+                    <p class="card-text">#{clients.date}</p>
+                </div>
+
+
+            </div>
+            <hr/>
+        </ui:repeat>
+
+
+    </div>
 </div>
 
-<h:form id="form">
-    <div class="container-fluid p-4 m-2 Medlemmar">
-        <p class="text-muted">Number of clients: #{clientBean.clients.size()}</p>
-        <label for="search_bar">Medlemmar:</label><br></br>
-        <input type="text" id="search_bar" name="fname" value="Sök namn"/>
 
-        <div class="table-responsive" style="overflow-y: auto">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">ID</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Phone</th>
-                    <th scope="col">Actions</th>
-                </tr>
-                </thead>
-                <tbody>
-                <ui:repeat value="#{clientBean.clients}" var="client">
-                    <tr>
-                        <td>#{client.clientID}</td>
-                        <td>#{client.name}</td>
-                        <td>#{client.phone}</td>
-                        <td>
+<div class=" m-3 p-xl-4 Medlemmar">
+    <!-- Your content goes here -->
 
-                            <!-- include the deleteModal.xhtml -->
-                            <ui:include src="deleteModal.xhtml">
-                                <ui:param name="entityID" value="#{client.clientID}"/>
-                                <ui:param name="bean" value="#{clientBean}"/>
-                                <ui:param name="entityType" value="client"/>
-                            </ui:include>
-                            <!-- Delete Button -->
-                            <button type="button" class="btn btn-danger p-2 m-1" data-toggle="modal"
-                                    data-target="#deleteConfirmationModal#{client.clientID}">
-                                Delete
-                            </button>
-                            <p:commandButton value="Edit" actionListener="#{clientBean.editClient(client.clientID)}"
-                                             styleClass="btn btn-primary p-1 m-1" update=":editDialog"
-                                             oncomplete="PF('editDialog').show()"/>
-                        </td>
-                    </tr>
-                </ui:repeat>
-                </tbody>
-            </table>
-        </div>
 
-        <p:commandButton value="Add client" action="#{clientBean.addClient}" styleClass="btn btn-primary p-1 m-1"
-                         update=":editDialog" oncomplete="PF('editDialog').show()"/>
+    <h:form>
+        <h5 style="margin-top:2px">Client List</h5>
+        <h:inputText styleClass="custom-input" value="#{clientBean.searchName}"/>
+        <h:commandButton styleClass="custom-button" value="Submit" action="#{clientBean.Search}"/>
+    </h:form>
+
+    <div class="list-group list-group-action test">
+
+        <h:form>
+            <ui:repeat value="#{clientBean.clients}" var="client">
+                <h:commandLink action="#{clientBean.setClientToEdit(client.clientID)}" styleClass="list-group-item list-group-item-action">
+                    <f:param name="clientId" value="#{client.clientID}" />
+                    #{client.name}
+                </h:commandLink>
+            </ui:repeat>
+        </h:form>
+
     </div>
-</h:form>
 
-<p:dialog id="editDialog" widgetVar="editDialog" modal="true" header="Edit Client" visible="false"
-          styleClass="editClientDialog">
-    <ui:include src="/includes/editClient.xhtml"/>
-</p:dialog>
+    <h:form>
+        <p:commandButton styleClass="add_button m-3" value="Add New Client" action="#{clientBean.addClient()}" update=":addcilent"
+                         oncomplete="PF('addcilent').show()"/>
+
+    </h:form>
+
+    <p:dialog id="addcilent" widgetVar="addcilent" modal="true" visible="false" header="Add Client" >
+        <ui:include src="editMember.xhtml"/>
+    </p:dialog>
+
+</div>
+
 
 </body>
 </html>
