--- a/apputveckling/src/main/webapp/views/admin_cases.xhtml
+++ b/apputveckling/src/main/webapp/views/admin_cases.xhtml
@@ -12,6 +12,8 @@
     <ui:define name="content">
         <h1>Cases</h1>
         <ui:include src="../includes/cassesContent.xhtml"/>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" type=""></script>
+
     </ui:define>
 
 </ui:composition>
