--- a/apputveckling/src/main/webapp/views/LogIn.xhtml
+++ b/apputveckling/src/main/webapp/views/LogIn.xhtml
@@ -8,25 +8,36 @@
 
 <f:view>
 
+   <h:head>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
+   </h:head>
+
    <h:body>
 
-      <h:form>
+      <h1>Sign in page</h1>
+      <div class="container min-vh-100 min-vw-100 d-flex justify-content-center align-items-center">
 
-         <h:outputLabel for="txtName">
+      <h:form styleClass="border p-5">
+
+         <h:outputLabel  for="txtName">
             <h:outputText value="Enter Name"> </h:outputText>
          </h:outputLabel>
-         <h:inputText id="txtName" value="#{signup.name}" ></h:inputText>
+         <h:inputText id="txtName" value="#{signup.name}" styleClass="form-control" required="true"> </h:inputText>
+
          <br></br>
 
          <h:outputLabel for="txtpass">
             <h:outputText value="Enter Password"> </h:outputText>
          </h:outputLabel>
-         <h:inputText id="txtpass" value="#{signup.password}" ></h:inputText>
+         <h:inputText id="txtpass" value="#{signup.password}" styleClass="form-control me-5 " required="true"> </h:inputText>
          <br></br>
 
-         <h:commandButton id="cmdInsert" value="Log in" action="#{signup.LogIn()}"></h:commandButton>
+         <p>Not a member? <a href="SignUp.xhtml">Register</a></p>
+
+         <h:commandButton id="cmdInsert"  value="Sign in" action="#{signup.LogIn()}" > </h:commandButton>
       </h:form>
 
+      </div>
 
    </h:body>
 </f:view>
