--- a/apputveckling/src/main/webapp/views/SignUp.xhtml
+++ b/apputveckling/src/main/webapp/views/SignUp.xhtml
@@ -7,44 +7,47 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 <f:view>
+   <h:head>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
+   </h:head>
 
    <h:body>
+      <h1>Sign up page</h1>
 
-      <h:form>
+      <div class="container min-vh-100 min-vw-100 d-flex justify-content-center align-items-center">
+
+      <h:form styleClass="border p-5">
 
          <h:outputLabel for="txtName">
             <h:outputText value="Enter Name"> </h:outputText>
          </h:outputLabel>
-         <h:inputText id="txtName" value="#{signup.name}" ></h:inputText>
-         <br></br>
+         <h:inputText id="txtName" value="#{signup.name}" styleClass="form-control mb-2 me-5 " required="true"> </h:inputText>
 
          <h:outputLabel for="txtpass">
             <h:outputText value="Enter Password"> </h:outputText>
          </h:outputLabel>
-         <h:inputText id="txtpass" value="#{signup.password}" ></h:inputText>
-         <br></br>
+         <h:inputText id="txtpass" value="#{signup.password}" styleClass="form-control mb-2" required="true"> </h:inputText>
 
          <h:outputLabel for="txtpassagain">
             <h:outputText value="Enter Password again"> </h:outputText>
          </h:outputLabel>
-         <h:inputText id="txtpassagain" value="#{signup.password2}" ></h:inputText>
-         <br></br>
+         <h:inputText id="txtpassagain" value="#{signup.password2}" styleClass="form-control mb-2" required="true"> </h:inputText>
 
          <h:outputLabel for="txtemail">
             <h:outputText value="Enter Email"> </h:outputText>
          </h:outputLabel>
-         <h:inputText id="txtemail" value="#{signup.email}" ></h:inputText>
-         <br></br>
+         <h:inputText id="txtemail" value="#{signup.email}" styleClass="form-control mb-2" required="true"> </h:inputText>
 
          <h:outputLabel for="txtphone">
             <h:outputText value="Enter Phonneumber"> </h:outputText>
          </h:outputLabel>
-         <h:inputText id="txtphone" value="#{signup.phone}" ></h:inputText>
-         <br></br>
+         <h:inputText id="txtphone" value="#{signup.phone}" styleClass="form-control mb-2" required="true"> </h:inputText>
+         <p>Allready a member? <a href="LogIn.xhtml">Sign in</a></p>
 
-         <h:commandButton id="cmdInsert" value="Create account" action="#{signup.add()}"></h:commandButton>
+         <h:commandButton id="cmdInsert" value="Create account" action="#{signup.add()}"> </h:commandButton>
       </h:form>
 
+      </div>
 
    </h:body>
 </f:view>
