--- a/apputveckling/src/main/webapp/includes/customerInfo.xhtml
+++ b/apputveckling/src/main/webapp/includes/customerInfo.xhtml
@@ -37,7 +37,8 @@
     </div>
 <hr/>
 
-
+<h:outputText> Här nere kommer jag har all information om admin och client, dvs konversationer och både gammla och
+pågående ärende</h:outputText>
 
 
 </body>
