--- a/apputveckling/src/main/webapp/includes/editClient.xhtml
+++ b/apputveckling/src/main/webapp/includes/editClient.xhtml
@@ -10,6 +10,12 @@
                 <h:outputLabel for="name" value="Name:"/>
                 <h:inputText id="name" value="#{clientBean.clientToEdit.name}"/>
 
+                <h:outputLabel for="password" value="Password:"/>
+                <h:inputText id="password" value="#{clientBean.clientToEdit.password}"/>
+
+                <h:outputLabel for="password2" value="Password:"/>
+                <h:inputText id="password2" value="#{clientBean.clientToEdit.password2}"/>
+
                 <h:outputLabel for="phone" value="Phone:"/>
                 <h:inputText id="phone" value="#{clientBean.clientToEdit.phone}"/>
 
