Produktsidan är mestadels klar.

--- a/apputveckling/src/main/webapp/views/admin_products.xhtml
+++ b/apputveckling/src/main/webapp/views/admin_products.xhtml
@@ -15,9 +15,7 @@
     <ui:define name="content">
         <h1 style="text-align: center;margin-bottom: 30px;">"product list!"</h1>
         <ui:include src="../includes/productContent.xhtml"/>
-        <h:form>
-            <h:commandButton value="BTN" action="#{navigationBean.goToHomePage()}"/>
-        </h:form>
+        <ui:include src="../includes/addForm.xhtml"/>
     </ui:define>
 
 
