--- a/apputveckling/src/main/webapp/includes/productContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/productContent.xhtml
@@ -1,4 +1,4 @@
-<div id="menu" class="container" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html">
+<div id="" class="container" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html">
 
     <div class="container-fluid row menu">
        <ui:repeat value="#{productBean.products}" var="item">
@@ -8,11 +8,12 @@
                 <h5 class="card-title">#{item.PRODUCT_NAME}</h5>
                 <p class="card-text">#{item.PRODUCT_MAIN_DESC}</p>
                <h:form>
-                  <h:commandButton styleClass="btn btn-danger" value="Radera produkt" action="#{productBean.deleteProduct(item.PRODUCT_ID)}"/>
+                  <h:commandButton styleClass="btn btn-danger" value="Radera" action="#{productBean.deleteProduct(item.PRODUCT_ID)}"/>
                </h:form>
                 <a href="" class="location link btn btn-dark">redigera inlägg</a>
             </div>
         </div>
        </ui:repeat>
     </div>
+   <h:commandButton styleClass="btn btn-info" value="Lägg till produkt"/>
 </div>
